--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,4 +2,10 @@
 @import 'core/reset';
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/sections.scss';
+@import 'layout/hero.scss';
+
+
+
+
 
