--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,6 +18,67 @@
   height: 14px;
   background-color: #0271bc; }
 
+.insomnia {
+  width: 100%;
+  height: 30px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.14;
+  letter-spacing: normal;
+  color: #8ccbea;
+  display: inline-flex;
+  padding-left: 15px;
+  padding-top: 10px; }
+
+.looking {
+  font-family: RobotoSlab;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  color: black; }
+
+.donec {
+  width: 290px;
+  height: 120px;
+  margin: 15px 0 30px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  color: #4a4a4a; }
+
+.botton-go {
+  width: 76px;
+  height: 45px;
+  margin: 30px 214px 0 0;
+  padding: 0 25px 0 26px;
+  border-radius: 22.5px;
+  border: solid 2px #f26002;
+  padding-bottom: 45px; }
+
+.go-text {
+  display: flex;
+  width: 25px;
+  height: 45px;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: #f26002; }
+
 .hero-box {
   width: 100%;
   height: 568px;
@@ -69,8 +130,5 @@
   padding: 18px 12px 15.3px 13px;
   border-radius: 22.5px;
   background-color: #ffffff; }
-
-.figure {
-  padding-left: 15%; }
 
 /*# sourceMappingURL=main.css.map */
