changes in sections

--- a/public/assets/css/layout/hero.css
+++ b/public/assets/css/layout/hero.css
@@ -50,4 +50,7 @@
   border-radius: 22.5px;
   background-color: #ffffff; }
 
+.figure {
+  padding-left: 10%; }
+
 /*# sourceMappingURL=hero.css.map */
