--- a/src/html/partials/sections.html
+++ b/src/html/partials/sections.html
@@ -1,46 +1,51 @@
-
-  
-  <section > 
-    <span class="insomnia">
-  <p > insomia tips</p>
-</span>
+<section>
+  <span class="insomnia">
+    <p> insomia tips</p>
+  </span>
   <span class="looking">
-  <h2>Looking Through A Window</h2>
-</span>
-<span class="donec">
-  <p>Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper sodales rotrum.</p> 
-</span>
+    <h2>Looking Through A Window</h2>
+  </span>
+  <span class="donec">
+    <p>Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
+      sodales rotrum.</p>
+  </span>
   <figure>
-  <div class="botton-go"> 
-    <span class="go-text"> 
-      Go 
-    </span>
-  </div>
-  </figure> 
+    <div class="botton-go">
+      <span class="go-text">
+        Go
+      </span>
+    </div>
+  </figure>
 
-  
-  </section>
-  <div>
-  <section>
-    <span>
-  <h2>3 Reasons To Purchase</h2>
-</span>
-  
-  <article> 
-  <h2>Ut sed metus</h2>
-  <p> lorem ipsum dolor sit amet consecteur.</p>
-  </article>
-  
-  <h2>Curabitur ac erat</h2>
-  <p> Mauris mattis urna quis lorem molestie.</p>
-  
-  <article>
-  <h2> Morbi dictums </h2>
-  <p> Alicuam in dolor et dolor tincidunt.</p>
-  </article>
+
+</section>
+
+  <section class="section-2">
+    <span class="reasons">
+      <h2>3 Reasons To Purchase</h2>
+    </span>
+
+    <article>
+      <span class="ut.sed">
+        <h2> Ut sed metus</h2>
+      </span>
+
+      <p> Lorem ipsum dolor sit amet consecteur.</p>
+    </article>
+    <article>
+      <h2> Curabitur ac erat</h2>
+      <p> Mauris mattis urna quis lorem molestie.</p>
+    </article>
+
+    <article>
+      <h2> Morbi dictums </h2>
+      <p> Alicuam in dolor et dolor tincidunt.</p>
+    </article>
+
+<div class="more-reasons-box">
+<span class="more-reasons"> More Reasons </span>
 </div>
-  
-  <button> More Reasons </button>
-  <img src="" alt="flechitaarriba">
-  
-  </section>
+
+<img src="./assets/images/flecha2.png." alt="flechitaarriba">
+
+</section>
