--- a/src/scss/layout/hero.scss
+++ b/src/scss/layout/hero.scss
@@ -52,5 +52,8 @@
   padding: 18px 12px 15.3px 13px;
   border-radius: 22.5px;
   background-color: #ffffff;
- 
+  
+ }
+.figure {
+  padding-left: 10%;
 }
