--- a/src/scss/layout/sections.scss
+++ b/src/scss/layout/sections.scss
@@ -64,3 +64,74 @@
     }
   
 
+.reasons {
+  height: 30px;
+  margin: 0 0 45px;
+  font-family: RobotoSlab;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: black;
+}
+.ut.sed {
+  width: 184px;
+  height: 30px;
+  font-family: RobotoSlab;
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color:black;
+}
+
+article p {
+  height: 63px;
+  margin: 30px 2px 0;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color:  #000000;
+}
+ .more-reasons-box {
+  width: 184px;
+  height: 45px;
+  margin: 45px 53px 0;
+  padding: 0 29.5px 0 30.5px;
+  border-radius: 22.5px;
+  background-color: #f26002;
+  
+ }
+.more-reasons {
+  width: 25px;
+  height: 45px;
+  font-family: Roboto;
+  font-size: 19px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.25;
+  letter-spacing: normal;
+  text-align: center;
+  color:#ffffff;
+}
+.section-2 {
+  width: 100%;
+  height: 624px;
+  padding: 30px 15px 60px;
+  background-color: #eff9ff;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  text-align: center;
+}
