--- a/public/assets/css/layout/sections.css
+++ b/public/assets/css/layout/sections.css
@@ -104,7 +104,8 @@ article p {
   margin: 45px 53px 0;
   padding: 0 29.5px 0 30.5px;
   border-radius: 22.5px;
-  background-color: #f26002; }
+  background-color: #f26002;
+  display: inline-block; }
 
 .more-reasons {
   width: 25px;
@@ -124,8 +125,6 @@ article p {
   height: 624px;
   padding: 30px 15px 60px;
   background-color: #eff9ff;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
   text-align: center; }
 
 /*# sourceMappingURL=sections.css.map */
