--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,21 +1,25 @@
 <footer>
+<div class="footer-box">
+    <nav class="list-1">
+        <ul>
+            <li> ARTICLES</li>
+            <li> BOOKS</li>
+            <li> EVENTS</li>
+            <li> REASONS </li>
+            <li> TIPS</li>
+        </ul>
+    </nav>
+
+    
+    <nav class="list-2">
+        <ul>
+            <li>TWITTER</li>
+            <li>INSTAGRAM</li>
+            <li>MASTODONT.SOCIAL</li>
+        </ul>
+    </nav>
     <p>@2023 </p>
     <p> we (love)components</p>
-    <nav>
-    <ul>
-    <li> ARTICLES</li>
-    <li> BOOKS</li>
-    <li> EVENTS</li>
-    <li> REASONS </li>
-    <li> TIPS</li>
-    </ul>
-    </nav>
-    <nav>
-    <ul>
-    <li>TWITTER</li>
-    <li>INSTAGRAM</li>
-    <li>MASTODONT.SOCIAL</li>
-    </ul>
-    </nav>
-    
-    </footer>
+</div>
+
+</footer>
