--- a/src/html/partials/sections.html
+++ b/src/html/partials/sections.html
@@ -1,51 +1,48 @@
 <section>
   <span class="insomnia">
-    <p> insomia tips</p>
+    <p>insomia tips</p>
   </span>
   <span class="looking">
     <h2>Looking Through A Window</h2>
   </span>
   <span class="donec">
-    <p>Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
-      sodales rotrum.</p>
+    <p>
+      Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at
+      lotus ex diamnec lectus.Vivamus semper sodales rotrum.
+    </p>
   </span>
   <figure>
     <div class="botton-go">
-      <span class="go-text">
-        Go
-      </span>
+      <span class="go-text"> Go </span>
     </div>
   </figure>
-
-
 </section>
 
-  <section class="section-2">
-    <span class="reasons">
-      <h2>3 Reasons To Purchase</h2>
+<section class="section-2">
+  <span class="reasons">
+    <h2>3 Reasons To Purchase</h2>
+  </span>
+
+  <article>
+    <span class="ut.sed">
+      <h2>Ut sed metus</h2>
     </span>
 
-    <article>
-      <span class="ut.sed">
-        <h2> Ut sed metus</h2>
-      </span>
+    <p>Lorem ipsum dolor sit amet consecteur.</p>
+  </article>
+  <article>
+    <h2>Curabitur ac erat</h2>
+    <p>Mauris mattis urna quis lorem molestie.</p>
+  </article>
 
-      <p> Lorem ipsum dolor sit amet consecteur.</p>
-    </article>
-    <article>
-      <h2> Curabitur ac erat</h2>
-      <p> Mauris mattis urna quis lorem molestie.</p>
-    </article>
+  <article>
+    <h2>Morbi dictums</h2>
+    <p>Alicuam in dolor et dolor tincidunt.</p>
+  </article>
 
-    <article>
-      <h2> Morbi dictums </h2>
-      <p> Alicuam in dolor et dolor tincidunt.</p>
-    </article>
+  <div class="more-reasons-box">
+    <span class="more-reasons"> More Reasons </span>
+  </div>
 
-<div class="more-reasons-box">
-<span class="more-reasons"> More Reasons </span>
-</div>
-
-<img src="./assets/images/ico-arrow.png" alt="flechitaarriba">
-
+  <img src="./assets/images/ico-arrow.png" alt="flechitaarriba" />
 </section>
