--- a/src/scss/layout/sections.scss
+++ b/src/scss/layout/sections.scss
@@ -111,6 +111,8 @@ article p {
   padding: 0 29.5px 0 30.5px;
   border-radius: 22.5px;
   background-color: #f26002;
+  display: inline-block;
+
   
  }
 .more-reasons {
@@ -131,7 +133,5 @@ article p {
   height: 624px;
   padding: 30px 15px 60px;
   background-color: #eff9ff;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
   text-align: center;
 }
