--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
 <div class="footer-box">
     <nav class="list-1">
-        <ul>
+        <ul class="ul-1">
             <li> ARTICLES</li>
             <li> BOOKS</li>
             <li> EVENTS</li>
@@ -18,8 +18,12 @@
             <li>MASTODONT.SOCIAL</li>
         </ul>
     </nav>
+    <span class="footer">
     <p>@2023 </p>
+</span>
+<span class="love">
     <p> we (love)components</p>
+</span>
 </div>
 
 </footer>
