--- a/public/assets/css/layout/hero.css
+++ b/public/assets/css/layout/hero.css
@@ -51,6 +51,7 @@
   background-color: #ffffff; }
 
 .figure {
-  padding-left: 10%; }
+  display: flex;
+  align-items: center; }
 
 /*# sourceMappingURL=hero.css.map */
