--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -3,7 +3,7 @@
     <h1 class="title"> ANONYMOUS PROXY </h1>
     <p class="hero-text"> In hac habitasse platea dictumst</p>
     <figure class="figure">
-      <img class="ico-scroll" src="./assets/images/flecha2.png" alt="flecha">
+      <img class="ico-scroll" src="./assets/images/flecha2.png" alt="contenido">
     </figure>
   </div>
 </section>
