--- a/src/html/partials/sections.html
+++ b/src/html/partials/sections.html
@@ -43,6 +43,8 @@
   <div class="more-reasons-box">
     <span class="more-reasons"> More Reasons </span>
   </div>
+<figure class="ico-arrow-box">
+  <img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="volver inicio" />
+</figure>
 
-  <img src="./assets/images/ico-arrow.png" alt="flechitaarriba" />
 </section>
