--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,7 +1,14 @@
 .footer-box {
-    height: 465px;
     padding: 60px 15px 45px;
     background-color: #304268;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+   
+}
+.footer-box ul {
+    list-style: none;
 }
 .list-1 {
     width: 73px;
@@ -16,8 +23,11 @@
     letter-spacing: normal;
     text-align: center;
     color: #ffffff;
-    text-decoration: none;
+
+
 }
+
+
 .list-2 {
     width: 147px;
     height: 90px;
@@ -28,6 +38,36 @@
     font-stretch: normal;
     font-style: normal;
     line-height: 1.88;
+    letter-spacing: normal;
+    text-align: center;
+    color:#ffffff;
+  }
+  
+    
+.footer {
+    width: 77px;
+    height: 30px;
+    margin: 30px 107px 0 106px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.14;
+    letter-spacing: normal;
+    text-align: center;
+    color:#ffffff;
+}
+.love {
+    width: 290px;
+    height: 30px;
+    margin: 60px 0 0;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+   padding-bottom: 15px;
     letter-spacing: normal;
     text-align: center;
     color:#ffffff;
