add links in hero

--- a/src/html/partials/sections.html
+++ b/src/html/partials/sections.html
@@ -2,25 +2,27 @@
   <span class="insomnia">
     <p>insomia tips</p>
   </span>
+  <div class="columna">
   <span class="looking">
     <h2>Looking Through A Window</h2>
   </span>
   <span class="donec">
     <p>
-      Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at
-      lotus ex diamnec lectus.Vivamus semper sodales rotrum.
+      Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper sodales rotrum.
     </p>
+  
   </span>
   <figure>
     <div class="botton-go">
       <span class="go-text"> Go </span>
     </div>
   </figure>
+</div>
 </section>
 
 <section class="section-2">
   <span class="reasons">
-    <h2>3 Reasons To Purchase</h2>
+    <h2 id="reasons">3 Reasons To Purchase</h2>
   </span>
 
   <article>
