--- a/public/assets/css/layout/sections.css
+++ b/public/assets/css/layout/sections.css
@@ -1,3 +1,6 @@
+.columna {
+  padding: 0 15px; }
+
 .insomnia {
   width: 100%;
   height: 30px;
@@ -14,6 +17,7 @@
   padding-top: 10px; }
 
 .looking {
+  width: 290px;
   font-family: RobotoSlab;
   font-size: 20px;
   font-weight: bold;
@@ -24,8 +28,7 @@
   color: black; }
 
 .donec {
-  width: 290px;
-  height: 120px;
+  width: 100%;
   margin: 15px 0 30px;
   font-family: Roboto;
   font-size: 18px;
@@ -34,12 +37,13 @@
   font-style: normal;
   line-height: 1.67;
   letter-spacing: normal;
-  color: #4a4a4a; }
+  color: #4a4a4a;
+  display: flex; }
 
 .botton-go {
   width: 76px;
   height: 45px;
-  margin: 30px 214px 0 0;
+  margin: 30px 214px 50px 0;
   padding: 0 25px 0 26px;
   border-radius: 22.5px;
   border: solid 2px #f26002;
