--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -85,6 +85,9 @@
   text-align: center;
   color: #ffffff; }
 
+.columna {
+  padding: 0 15px; }
+
 .insomnia {
   width: 100%;
   height: 30px;
@@ -101,6 +104,7 @@
   padding-top: 10px; }
 
 .looking {
+  width: 290px;
   font-family: RobotoSlab;
   font-size: 20px;
   font-weight: bold;
@@ -111,8 +115,7 @@
   color: black; }
 
 .donec {
-  width: 290px;
-  height: 120px;
+  width: 100%;
   margin: 15px 0 30px;
   font-family: Roboto;
   font-size: 18px;
@@ -121,12 +124,13 @@
   font-style: normal;
   line-height: 1.67;
   letter-spacing: normal;
-  color: #4a4a4a; }
+  color: #4a4a4a;
+  display: flex; }
 
 .botton-go {
   width: 76px;
   height: 45px;
-  margin: 30px 214px 0 0;
+  margin: 30px 214px 50px 0;
   padding: 0 25px 0 26px;
   border-radius: 22.5px;
   border: solid 2px #f26002;
@@ -233,9 +237,6 @@ article p {
   background-repeat: no-repeat;
   background-size: cover;
   padding: 0 15px 53px 0;
-  display: flex; }
-
-.hero-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -245,7 +246,7 @@ article p {
 .title {
   width: 290px;
   height: 110px;
-  margin: 240px 0 10px 15px;
+  margin: 268px 0 10px 15px;
   font-family: RobotoSlab;
   font-size: 42px;
   font-weight: bold;
@@ -273,7 +274,6 @@ article p {
 .ico-scroll {
   width: 45px;
   height: 45px;
-  margin: 45px 122px 0 94px;
   padding: 18px 12px 15.3px 13px;
   border-radius: 22.5px;
   background-color: #ffffff; }
