--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,3 +1,6 @@
 <header class="header">
-    <img class="menu" src="./assets/images/ico-menu.png" alt="menu">
+
+    <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu" src="./assets/images/ico-menu.png"
+            alt="menu"></a>
+
 </header>
