--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -236,6 +236,7 @@ article p {
   background-image: url(../images/cover.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   padding: 0 15px 53px 0;
   display: flex;
   flex-direction: column;
