--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -4,6 +4,7 @@
     background-image: url(../images/cover.png);
     background-repeat: no-repeat;
     background-size:cover;
+    background-position: center;
     padding: 0 15px 53px 0;
     display:flex;
     flex-direction: column;
