add links in footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,6 +10,10 @@
 .footer-box ul {
     list-style: none;
 }
+.footer-box li{
+    text-decoration: none;
+    color: #ffffff;
+}
 .list-1 {
     width: 73px;
     height: 150px;
