--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -29,6 +29,10 @@
 .footer-box ul {
   list-style: none; }
 
+.footer-box li {
+  text-decoration: none;
+  color: #ffffff; }
+
 .list-1 {
   width: 73px;
   height: 150px;
