add changes section 2

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -13,9 +13,9 @@
     
     <nav class="list-2">
         <ul>
-            <a href=""><li>TWITTER</li></a>
-           <a href=""> <li>INSTAGRAM</li></a>
-           <a href=""> <li>MASTODONT.SOCIAL</li></a>
+            <a href="https://twitter.com/Adalab_Digital?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><li>TWITTER</li></a>
+           <a href="https://www.instagram.com/adalab_digital/?hl=es" target="_blank"> <li>INSTAGRAM</li></a>
+           <a href="https://mastodon.social/explore" target="_blank"> <li>MASTODONT.SOCIAL</li></a>
         </ul>
     </nav>
     <span class="footer">
