--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -50,7 +50,7 @@
 .list-2 {
   width: 147px;
   height: 90px;
-  margin: 30px 71px 30px 72px;
+  margin: 15px 71px 15px 72px;
   font-family: Roboto;
   font-size: 16px;
   font-weight: normal;
@@ -78,7 +78,7 @@
 .love {
   width: 290px;
   height: 30px;
-  margin: 60px 0 0;
+  margin: 10px 0 0;
   font-family: Roboto;
   font-size: 14px;
   font-weight: normal;
@@ -88,6 +88,142 @@
   letter-spacing: normal;
   text-align: center;
   color: #ffffff; }
+
+.section-2 {
+  width: 100%;
+  height: 624px;
+  padding: 30px 15px 60px;
+  background-color: #eff9ff;
+  text-align: center;
+  display: -ms-inline-grid; }
+
+.reasons {
+  height: 30px;
+  margin: 0 0 45px;
+  font-family: RobotoSlab;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: black; }
+
+.ut.sed {
+  width: 184px;
+  height: 30px;
+  font-family: RobotoSlab;
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color: black; }
+
+article p {
+  height: 63px;
+  margin: 2px 0;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000000; }
+
+article h2 {
+  margin-top: 45px; }
+
+.more-reasons-box {
+  width: 184px;
+  height: 45px;
+  padding: 0 29.5px 0 30.5px;
+  border-radius: 22.5px;
+  background-color: #f26002;
+  display: inline-block; }
+
+.more-reasons {
+  width: 25px;
+  height: 45px;
+  font-family: Roboto;
+  font-size: 19px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff; }
+
+.ico-arrow-box {
+  width: 45px;
+  height: 45px;
+  background-color: #ffffff; }
+
+.ico-arrow {
+  width: 20.6px;
+  height: 24px;
+  -o-object-fit: contain;
+  object-fit: contain;
+  border-radius: 50%; }
+
+.hero-box {
+  width: 100%;
+  height: 568px;
+  background-image: url(../images/cover.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 0 15px 53px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center; }
+
+.title {
+  width: 290px;
+  height: 110px;
+  margin: 268px 0 10px 15px;
+  font-family: RobotoSlab;
+  font-size: 42px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.31;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff; }
+
+.hero-text {
+  width: 290px;
+  height: 21px;
+  margin: 10px 0 45px 15px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff; }
+
+.ico-scroll {
+  width: 45px;
+  height: 45px;
+  padding: 18px 12px 15.3px 13px;
+  border-radius: 22.5px;
+  background-color: #ffffff; }
+
+.figure {
+  display: flex;
+  align-items: center; }
 
 .columna {
   padding: 0 15px; }
@@ -153,138 +289,5 @@
   letter-spacing: normal;
   text-align: center;
   color: #f26002; }
-
-.reasons {
-  height: 30px;
-  margin: 0 0 45px;
-  font-family: RobotoSlab;
-  font-size: 20px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.25;
-  letter-spacing: normal;
-  text-align: center;
-  color: black; }
-
-.ut.sed {
-  width: 184px;
-  height: 30px;
-  font-family: RobotoSlab;
-  font-size: 18px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.67;
-  letter-spacing: normal;
-  text-align: center;
-  color: black; }
-
-article p {
-  height: 63px;
-  margin: 30px 2px 0;
-  font-family: Roboto;
-  font-size: 18px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.67;
-  letter-spacing: normal;
-  text-align: center;
-  color: #000000; }
-
-.more-reasons-box {
-  width: 184px;
-  height: 45px;
-  margin: 45px 53px 0;
-  padding: 0 29.5px 0 30.5px;
-  border-radius: 22.5px;
-  background-color: #f26002;
-  display: inline-block; }
-
-.more-reasons {
-  width: 25px;
-  height: 45px;
-  font-family: Roboto;
-  font-size: 19px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 2.25;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff; }
-
-.section-2 {
-  width: 100%;
-  height: 624px;
-  padding: 30px 15px 60px;
-  background-color: #eff9ff;
-  text-align: center; }
-
-.ico-arrow-box {
-  width: 45px;
-  height: 45px;
-  box-shadow: 0 2px 4px 0 var(--k-50);
-  background-color: #ffffff; }
-
-.ico-arrow {
-  width: 20.6px;
-  height: 24px;
-  -o-object-fit: contain;
-  object-fit: contain; }
-
-.hero-box {
-  width: 100%;
-  height: 568px;
-  background-image: url(../images/cover.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding: 0 15px 53px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center; }
-
-.title {
-  width: 290px;
-  height: 110px;
-  margin: 268px 0 10px 15px;
-  font-family: RobotoSlab;
-  font-size: 42px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.31;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff; }
-
-.hero-text {
-  width: 290px;
-  height: 21px;
-  margin: 10px 0 45px 15px;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff; }
-
-.ico-scroll {
-  width: 45px;
-  height: 45px;
-  padding: 18px 12px 15.3px 13px;
-  border-radius: 22.5px;
-  background-color: #ffffff; }
-
-.figure {
-  display: flex;
-  align-items: center; }
 
 /*# sourceMappingURL=main.css.map */
