--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -95,7 +95,9 @@
   padding: 30px 15px 60px;
   background-color: #eff9ff;
   text-align: center;
-  display: -ms-inline-grid; }
+  justify-content: center;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr; }
 
 .reasons {
   height: 30px;
@@ -145,7 +147,8 @@ article h2 {
   padding: 0 29.5px 0 30.5px;
   border-radius: 22.5px;
   background-color: #f26002;
-  display: inline-block; }
+  -webkit-margin-start: 20%;
+  margin-inline-start: 20%; }
 
 .more-reasons {
   width: 25px;
@@ -161,16 +164,24 @@ article h2 {
   color: #ffffff; }
 
 .ico-arrow-box {
-  width: 45px;
-  height: 45px;
-  background-color: #ffffff; }
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 50%;
+  -webkit-margin-start: 42.5%;
+  margin-inline-start: 42.5%;
+  position: relative;
+  top: 5vh;
+  z-index: 0; }
 
 .ico-arrow {
-  width: 20.6px;
-  height: 24px;
+  width: 30px;
   -o-object-fit: contain;
   object-fit: contain;
-  border-radius: 50%; }
+  border-radius: 50%;
+  padding-top: 40%; }
 
 .hero-box {
   width: 100%;
