--- a/src/html/partials/section-2.html
+++ b/src/html/partials/section-2.html
@@ -24,7 +24,7 @@
       <span class="more-reasons"> More Reasons </span>
     </div>
   <figure class="ico-arrow-box">
-    <img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="volver inicio" />
+   <a href="#burguer"><img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="home" /></a>
   </figure>
   
   </section>
