--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -22,7 +22,7 @@
     <p>@2023 </p>
 </span>
 <span class="love">
-    <p> we (love)components</p>
+    <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
 </span>
 </div>
 
