--- a/src/html/partials/section-1.html
+++ b/src/html/partials/section-1.html
@@ -1,6 +1,6 @@
 <section id="burguer">
     <span class="insomnia">
-      <p>insomia tips</p>
+      <p>Insomia tips</p>
     </span>
     <div class="columna">
     <span class="looking">
