--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -6,20 +6,22 @@
     text-align: center;
     align-items: center;
    
-}
-.footer-box ul {
+    ul{
     list-style: none;
-}
-.footer-box li{
+
+ li {
     text-decoration: none;
     color: #ffffff;
 }
+}
+}
+
 .list-1 {
     width: 73px;
     height: 150px;
     margin: 0 108px 30px 109px;
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -37,7 +39,7 @@
     height: 90px;
     margin: 15px 71px 15px 72px;
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -53,7 +55,7 @@
     height: 30px;
     margin: 30px 107px 0 106px;
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -67,7 +69,7 @@
     height: 30px;
     margin: 10px 0 0;
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
