--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,15 +1,10 @@
 .header {
-    width: 44px;
-  height: 44px;
+  width: 44px;
+  height:7vh;
   margin: 0 94px 240px 0;
   padding: 15px 14px;
   background-color: #0271bc;
   position: fixed;
   top: 0;
   z-index: 1;
-}
-.menu {
-    width: 16px;
-  height: 14px;
-  background-color:#0271bc;
 }
