--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero-box {
     width: 100%;
-    height: 568px;
+    height: 100%;
     background-image: url(../images/cover.png);
     background-repeat: no-repeat;
     background-size:cover;
@@ -21,7 +21,7 @@
   height: 110px;
   margin: 268px 0 10px 15px;
   font-family: RobotoSlab;
-  font-size: 42px;
+  font-size: 2.625rem;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
@@ -35,7 +35,7 @@
     height: 21px;
     margin: 10px 0 45px 15px;
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -50,11 +50,12 @@
   padding: 18px 12px 15.3px 13px;
   border-radius: 22.5px;
   background-color: #ffffff;
+ 
   
  }
 .figure {
   display: flex;
-  align-items: center;
+  justify-content: center;
   
 
 }
