--- a/src/scss/layout/_section-1.scss
+++ b/src/scss/layout/_section-1.scss
@@ -1,11 +1,12 @@
 .columna {
     padding: 0 15px;
   }
+  
   .insomnia {
       width: 100%;
       height: 30px;
       font-family: Roboto;
-      font-size: 14px;
+      font-size: 0.875rem;
       font-weight: normal;
       font-stretch: normal;
       font-style: normal;
@@ -20,20 +21,20 @@
   .looking {
     width: 290px;
     font-family: RobotoSlab;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.25;
     letter-spacing: normal;
-    color: black;
+    color:$color_link;
   
   }
   .donec {
       width: 100%;
       margin: 15px 0 30px;
       font-family: Roboto;
-      font-size: 18px;
+      font-size: 1.125rem;
       font-weight: normal;
       font-stretch: normal;
       font-style: normal;
@@ -57,7 +58,7 @@
       width: 25px;
       height: 45px;
       font-family: Roboto;
-      font-size: 20px;
+      font-size: 1.25rem;
       font-weight: 500;
       font-stretch: normal;
       font-style: normal;
