--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,4 +1,5 @@
 <footer>
+    
 <div class="footer-box">
     <nav class="list-1">
         <ul class="ul-1">
@@ -18,12 +19,14 @@
            <a href="https://mastodon.social/explore" target="_blank"> <li>MASTODONT.SOCIAL</li></a>
         </ul>
     </nav>
+    <div>
     <span class="footer">
     <p>@2023 </p>
 </span>
 <span class="love">
     <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
 </span>
+</div>
 </div>
 
 </footer>
