--- a/src/html/partials/section-2.html
+++ b/src/html/partials/section-2.html
@@ -2,7 +2,7 @@
     <span class="reasons">
       <h2 id="reasons">3 Reasons To Purchase</h2>
     </span>
-  
+  <div class="articles-1">
     <article>
       <span class="ut.sed">
         <h2>Ut sed metus</h2>
@@ -19,12 +19,13 @@
       <h2>Morbi dictums</h2>
       <p>Alicuam in dolor et dolor tincidunt.</p>
     </article>
+  </div>
   
-    <div class="more-reasons-box">
+    <span class="more-reasons-box">
       <span class="more-reasons"> More Reasons </span>
+    </span>
+    <div class="ico-arrow-box">
+      <a href="#burguer"><img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="home" /></a>
     </div>
-  <figure class="ico-arrow-box">
-   <a href="#burguer"><img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="home" /></a>
-  </figure>
   
   </section>
