--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -16,6 +16,8 @@
 }
 }
 
+    
+
 .list-1 {
     width: 73px;
     height: 150px;
@@ -53,7 +55,6 @@
 .footer {
     width: 77px;
     height: 30px;
-    margin: 30px 107px 0 106px;
     font-family: Roboto;
     font-size: 0.875rem;
     font-weight: normal;
@@ -73,8 +74,16 @@
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
-   padding-bottom: 15px;
+    padding-bottom: 15px;
     letter-spacing: normal;
     text-align: center;
     color:#ffffff;
+  }
+  @media screen and (min-width:768px) {
+   .footer-box{
+    display:flex;
+    flex-direction:row-reverse;
+    justify-content: center;
+ 
+   }
   }
