--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -14,7 +14,6 @@
 
    
 }
-
  
 .title {
   width: 290px;
@@ -58,4 +57,19 @@
   justify-content: center;
   
 
+}
+@media screen and (min-width:768px) {
+  .title {
+    font-size: 80px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items:center;
+  }
+  .hero-text {
+    font-size: 24px;
+    width: 100%;
+    padding-top: 40px;
+  }
 }
