--- a/src/scss/layout/_sections.scss
+++ b/src/scss/layout/_sections.scss
@@ -1,6 +1,6 @@
 .section-2 {
   width: 100%;
-  height: 624px;
+  height: 106vh;
   padding: 30px 15px 60px;
   background-color: #eff9ff;
   text-align: center;
@@ -58,9 +58,10 @@ letter-spacing: normal;
 text-align: center;
 color:$color_link;
 }
-article h2 {
+ h2 {
 margin-top: 45px;
 }
+
 .more-reasons-box {
 width: 184px;
 height: 45px;
@@ -85,27 +86,45 @@ text-align: center;
 color:#ffffff;
 }
 
-
-
 .ico-arrow-box {
-width: 50px;
-height: 50px;
-display: flex;
-justify-content: center;
-background-color:#ffffff;
-border-radius: 50%;
-margin-inline-start: 42.5%;
-position: relative;
-top: 5vh;
-z-index: 0;
+  width: 50px;
+  height: 50px;
+  background-color:#ffffff;
+  border-radius: 50%;
+  margin-inline-start: 42.5%;
+  display:flex;
+  justify-content: center;
+  position: relative;
+  top: 5vh;
+  z-index: 0;
+  
+  }
+  .ico-arrow {
+  width: 30px;
+  object-fit: contain;
+  border-radius: 50%;
+  padding-top: 40%;
+  
+ }
+ @media screen and (min-width:768px) {
+  .articles-1 {
+  display: grid;
+  grid-template-columns: 250px 250px 250px;
+  //height: 300px;
+  column-gap: 50px;
+  justify-content: space-between;
 
-}
-.ico-arrow {
-width: 30px;
-//height: 24px;
-object-fit: contain;
-border-radius: 50%;
-padding-top: 40%;
 
+ }
+ .section-2 {
+  height: 428px;
 
-}
+ }
+ .more-reasons-box {
+  margin-top: 80px;
+  margin-inline-start: 40%;
+ }
+ .ico-arrow-box {
+  margin-inline-start: 48%;
+ }
+ }
