--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -82,8 +82,24 @@
   @media screen and (min-width:768px) {
    .footer-box{
     display:flex;
-    flex-direction:row-reverse;
-    justify-content: center;
- 
+    flex-direction: row;
+    justify-content:center;
+
+    
+    .love { 
+        order: -1;
+        text-align: left;
+    }
+    .list-2 {
+        order: -2;
+        text-align: left;
+    }
+    .list-1 {
+        text-align: left;
+       
+    }
+
+    
    }
   }
+  
