--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,32 +1,49 @@
 <footer>
-    
-<div class="footer-box">
-    <nav class="list-1">
-        <ul class="ul-1">
-            <a href="https://adalab.es/bootcamp-programacion/" target="_blank"><li > ARTICLES</li></a>
-           <a href="https://adalab.es/blog/" target="_blank"><li> BOOKS</li></a>
-           <a href="https://adalab.es/equipo/" target="_blank"> <li> EVENTS</li></a>
-            <a href="https://adalab.es/por-que-elegirnos/" target="_blank" ><li> REASONS </li></a>
-            <a href="https://adalab.es/contacto/" target="_blank"><li> TIPS</li></a>
-        </ul>
-    </nav>
 
-    
-    <nav class="list-2">
-        <ul>
-            <a href="https://twitter.com/Adalab_Digital?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><li>TWITTER</li></a>
-           <a href="https://www.instagram.com/adalab_digital/?hl=es" target="_blank"> <li>INSTAGRAM</li></a>
-           <a href="https://mastodon.social/explore" target="_blank"> <li>MASTODONT.SOCIAL</li></a>
-        </ul>
-    </nav>
-    <div>
-    <span class="footer">
-    <p>@2023 </p>
-</span>
-<span class="love">
-    <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
-</span>
-</div>
-</div>
+    <div class="footer-box">
+        <nav class="list-1">
+            <ul class="ul-1">
+                <a href="https://adalab.es/bootcamp-programacion/" target="_blank">
+                    <li> ARTICLES</li>
+                </a>
+                <a href="https://adalab.es/blog/" target="_blank">
+                    <li> BOOKS</li>
+                </a>
+                <a href="https://adalab.es/equipo/" target="_blank">
+                    <li> EVENTS</li>
+                </a>
+                <a href="https://adalab.es/por-que-elegirnos/" target="_blank">
+                    <li> REASONS </li>
+                </a>
+                <a href="https://adalab.es/contacto/" target="_blank">
+                    <li> TIPS</li>
+                </a>
+            </ul>
+        </nav>
+
+
+        <nav class="list-2">
+            <ul>
+                <a href="https://twitter.com/Adalab_Digital?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                    target="_blank">
+                    <li>TWITTER</li>
+                </a>
+                <a href="https://www.instagram.com/adalab_digital/?hl=es" target="_blank">
+                    <li>INSTAGRAM</li>
+                </a>
+                <a href="https://mastodon.social/explore" target="_blank">
+                    <li>MASTODONT.SOCIAL</li>
+                </a>
+            </ul>
+        </nav>
+        <div>
+            <span class="footer">
+                <p>@2023 </p>
+            </span>
+            <span class="love">
+                <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
+            </span>
+        </div>
+    </div>
 
 </footer>
