--- a/src/html/partials/section-1.html
+++ b/src/html/partials/section-1.html
@@ -3,13 +3,14 @@
     <span class="insomnia">
       <p>Insomia tips</p>
     </span>
-    
+
     <span class="looking">
       <h2>Looking Through A Window</h2>
     </span>
     <span class="donec">
       <p>
-        Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper sodales rotrum.
+        Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
+        sodales rotrum.
       </p>
     </span>
     <figure>
@@ -18,4 +19,4 @@
       </div>
     </figure>
   </div>
-  </section>
+</section>
