--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -36,12 +36,12 @@
                 </a>
             </ul>
         </nav>
-        <div>
-            <span class="footer">
-                <p>@2023 </p>
-            </span>
+        <div class="footer">
+
+            <p>@2023 </p>
+
             <span class="love">
-                <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
+                <p> we <span class="heart">♥</span> components </p>
             </span>
         </div>
     </div>
