--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -53,7 +53,7 @@
   
     
 .footer {
-    width: 77px;
+ 
     height: 30px;
     font-family: Roboto;
     font-size: 0.875rem;
@@ -79,28 +79,36 @@
     text-align: center;
     color:#ffffff;
   }
+  .heart {
+    color: #f26002;
+    font-size: 1rem;
+
+  }
+
   @media screen and (min-width:768px) {
-   .footer-box{
-    display:flex;
-    flex-direction: row;
-    justify-content:center;
-    padding-inline-end: 15%;
+    .footer-box{
+     display:flex;
+     flex-direction: row;
+     justify-content:space-around;
+     align-items:flex-start;
 
     
-    .love { 
-        order: -1;
-        text-align: left;
+    .footer { 
+       order: -1;
+       text-align: left;
     }
     .list-2 {
-        order: -2;
+    
         text-align: left;
+        margin: 0;
     }
     .list-1 {
+      
         text-align: left;
+
        
     }
-
-    
+  
    }
   }
   
