--- a/src/scss/layout/_sections.scss
+++ b/src/scss/layout/_sections.scss
@@ -14,6 +14,9 @@
     h2 {
       color:$color_link
     }
+    @media screen and (min-width:768px) {
+      
+    }
    }
   }
 
@@ -110,7 +113,6 @@ color:#ffffff;
   .articles-1 {
   display: grid;
   grid-template-columns: 250px 250px 250px;
-  //height: 300px;
   column-gap: 50px;
   justify-content: space-between;
 
