--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
-
-    <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu" src="./assets/images/ico-menu.png"
-            alt="menu"></a>
-
+    <nav>
+        <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu"
+                src="./assets/images/ico-menu.png" alt="menu"></a>
+    </nav>
 </header>
