--- a/src/html/partials/section-1.html
+++ b/src/html/partials/section-1.html
@@ -1,22 +1,16 @@
 <section id="burguer">
   <div class="columna">
-    <span class="insomnia">
-      <p>Insomia tips</p>
-    </span>
-
-    <span class="looking">
-      <h2>Looking Through A Window</h2>
-    </span>
-    <span class="donec">
-      <p>
-        Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
-        sodales rotrum.
-      </p>
+    <p class="insomnia"> Insomia tips</p>
+    <h2 class="looking">Looking Through A Window</h2>
+    <p class="donec">
+      Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
+      sodales rotrum.
+    </p>
     </span>
     <figure>
-      <div class="botton-go">
+      <button class="botton-go">
         <span class="go-text"> Go </span>
-      </div>
+      </button>
     </figure>
   </div>
 </section>
