--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
   <div class="hero-box">
-    <h1 class="title"> ANONYMOUS PROXY </h1>
+    <h1 class="title"> Anonimous Proxy </h1>
     <p class="hero-text"> In hac habitasse platea dictumst</p>
     <figure class="figure">
       <a href="#reasons"><img class="ico-scroll" src="./assets/images/flecha2.png" alt="reasons"></a>
