--- a/src/scss/layout/_section-1.scss
+++ b/src/scss/layout/_section-1.scss
@@ -56,11 +56,13 @@
     .botton-go {
     width: 76px;
     height: 45px;
+    background-color: white;
     margin: 30px 214px 50px 0;
     padding: 0 25px 0 26px;
     border-radius: 22.5px;
     border: solid 2px #f26002;
     padding-bottom: 45px;
+    
     }
     
    .go-text {
